@@ -1,12 +1,9 @@
 /*
    $Id: dbdimp.h,v 1.48 2004/02/02 08:10:17 timbo Exp $
 
-   Copyright (c) 1994,1995,1996,1997,1998,1999  Tim Bunce
+   Copyright (c) 1994-2005 Tim Bunce
 
-   You may distribute under the terms of either the GNU General Public
-   License or the Artistic License, as specified in the Perl README file,
-   with the exception that it cannot be placed on a CD-ROM or similar media
-   for commercial distribution without the prior approval of the author.
+   See the COPYRIGHT section in the Oracle.pm file for terms.
 
 */
 
